--- a/01_board/group_study_board_front/src/component/board.css
+++ b/01_board/group_study_board_front/src/component/board.css
@@ -97,3 +97,8 @@ textarea {
   color: #939393;
   cursor: pointer;
 }
+.inside-pagenation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
